--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 .kotlin
+src/main/resources/vuespringtimer-cert.p12
+src/main/resources/application.properties
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
